--- a/waf/5-ubuntu-custom-modsecurity-wget-git-nginx-configsstart/nginx.conf
+++ b/waf/5-ubuntu-custom-modsecurity-wget-git-nginx-configsstart/nginx.conf
@@ -42,7 +42,7 @@ http {
 
     # Enable ModSecurity
     modsecurity on;
-    modsecurity_rules_file /usr/local/nginx/conf/modsecurity.conf;
+    modsecurity_rules_file /etc/nginx/modsecurity.conf;
 
         #location / {
         #    root   html;
