--- a/waf/3-ubuntu-custom-wget-git-modsecurity/Dockerfile
+++ b/waf/3-ubuntu-custom-wget-git-modsecurity/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu-custom-wget-git
 
 #make modsecurity
-RUN cd /ModSecurity && git checkout v3/master && git submodule init && git submodule update && ./build.sh && ./configure --without-lmdb && make && make install
+RUN cd /ModSecurity && git checkout v3/master && git submodule init && git submodule update && ./build.sh && ./configure --without-lmdb && make -j 8 && make install
 
