--- a/waf/5-ubuntu-custom-modsecurity-wget-git-nginx-configsstart/nginx.conf
+++ b/waf/5-ubuntu-custom-modsecurity-wget-git-nginx-configsstart/nginx.conf
@@ -15,6 +15,20 @@ events {
 
 
 http {
+
+upstream cluster {
+
+      server 172.17.0.10:80;
+
+            #check interval=5000 rise=1 fall=3 timeout=4000;
+
+            #check interval=3000 rise=2 fall=5 timeout=1000 type=ssl_hello;
+
+            #check interval=3000 rise=2 fall=5 timeout=1000 type=http;
+            #check_http_send "HEAD / HTTP/1.0\r\n\r\n";
+            #check_http_expect_alive http_2xx http_3xx;
+        }
+
     include       mime.types;
     default_type  application/octet-stream;
 
@@ -33,9 +47,14 @@ http {
     #gzip  on;
 
     server {
-        listen       80;
+        listen       808;
         server_name  localhost;
 
+    location /nginx_status {
+        stub_status on;
+
+        access_log off;
+    }
         #charset koi8-r;
 
         #access_log  logs/host.access.log  main;
@@ -50,7 +69,7 @@ http {
         #}
 
 		location / {
-			proxy_pass http://localhost/;
+      proxy_pass http://cluster;
 			proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
 			proxy_redirect off;
 			proxy_buffering off;
@@ -59,6 +78,11 @@ http {
 			proxy_set_header        X-Real-IP       $remote_addr;
 			proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
 		}
+
+    location /foo {
+                        upstream_status;
+}
+
 		
         #error_page  404              /404.html;
 
