--- a/waf/2-ubuntu-custom-wget-git/Dockerfile
+++ b/waf/2-ubuntu-custom-wget-git/Dockerfile
@@ -4,5 +4,9 @@ RUN git clone https://github.com/SpiderLabs/ModSecurity
 
 RUN git clone https://github.com/SpiderLabs/ModSecurity-nginx && git clone https://github.com/SpiderLabs/owasp-modsecurity-crs.git /usr/src/owasp-modsecurity-crs
 
+RUN git clone https://github.com/petermolnar/ngx_upstream_status.git /ngx_upstream_status
+
+RUN git clone https://github.com/yaoweibin/nginx_upstream_check_module /nginx_upstream_check_module
+
 RUN wget http://nginx.org/download/nginx-1.12.0.tar.gz
 
